# micro_bench

./: CMakeLists.txt
immune_system/: CMakeLists.txt  cmakeLists_.txt  immune_system.hpp  immune_system_client.cpp  immune_system_simple_client.cpp
immune_system/immune_system/: CMakeLists.txt  antibodies.cpp  antibodies.hpp  antibodies_factory.cpp  antibodies_factory.hpp  cmakeLists__.txt  foreign_bodies.hpp  immune_system.cpp  immune_system.hpp
immune_system/immune_system/server/: antibodies.cpp  antibodies.hpp  antibodies_factory.cpp  antibodies_factory.hpp  common_objects.hpp  foreign_bodies.cpp  foreign_bodies.hpp  foreign_bodies_factory.cpp  foreign_bodies_factory.hpp
immune_system/immune_system_simple/: CMakeLists.txt  immune_system.cpp  immune_system.hpp
immune_system/immune_system_simple/server/: antibodies.cpp  antibodies.hpp  antibodies_factory.cpp  antibodies_factory.hpp
